[package]
name = "arrow-convert-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow-format = { version = "0.7.0", features = ["flight-data"]}
arrow2 = { version = "0.12.0", features = ["io_flight"]}
arrow2_convert = { version = "0.2.0", features = ["arrow2_convert_derive", "derive"]}
arrow2_convert_derive = "0.2.0"
serde = "1.0.137"
serde_yaml = "0.8.24"
